# nlp-learning-paths

./: .gitignore  README.md  pyproject.toml
data/: chatbot_kb.csv  sample_reviews.csv  sentiment_reviews.csv  topic_corpus.csv
notebooks/: 01_Introduction_to_NLP.ipynb  01_week1_text_basics.ipynb  02_Basic_Text_Processing.ipynb  02_week2_features_tfidf.ipynb  03_Feature_Engineering_for_NLP.ipynb  03_week3_classification.ipynb  04_Language_Modeling.ipynb  04_week4_spacy_intro.ipynb  05_Syntax_and_Parsing.ipynb  06_Sentiment_Analysis.ipynb  07_Topic_Modeling.ipynb  08_Text_Summarization.ipynb  09_Machine_Translation.ipynb  10_Introduction_to_Chatbots.ipynb  11_Personal_Assistant_Chatbot_Project.ipynb  12_News_Aggregator_Project.ipynb  13_Sentiment_Analysis_Dashboard_Project.ipynb
scripts/: 01_text_preprocessing.py  02_sentiment_analysis.py  02_text_cleaning.py  03_feature_engineering.py  03_text_classification.py  04_language_modeling.py  05_syntax_parsing.py  06_sentiment_analysis.py  07_topic_modeling.py  08_text_summarization.py  09_machine_translation.py  10_chatbot.py
src/nlp_learning/: __init__.py  features.py  preprocessing.py  similarity.py  text_cleaning.py
tests/: test_features.py  test_preprocessing.py  test_similarity.py  test_text_cleaning.py
