[project]
name = "nlp-python-learning"
version = "0.1.0"
description = "Hands-on Natural Language Processing learning workspace in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "nltk>=3.9",
  "spacy>=3.7",
  "scikit-learn>=1.5",
  "pandas>=2.2",
  "matplotlib>=3.9",
  "jupyter>=1.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.9"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
